<resources>
    <string name="app_name">NIROGYA</string>
    <string name="activity_achievement_selected_medel_caption_default_text">10000</string>
    <string name="activity_achievement_selected_medel_caption_steps_text">Steps</string>
    <string name="activity_achievement_bronze_medal_text">10000 Steps</string>
    <string name="activity_achievement_silver_medal_text">20000 Steps</string>
    <string name="activity_achievement_gold_medal_text">30000 Steps</string>
    <string name="activity_achievement_bronze_medal_button_text">Bronze Medal</string>
    <string name="activity_achievement_target_achievement_button_text">Bronze Medal</string>
    <string name="activity_achievement_silver_medal_button_text">Silver Medal</string>
    <string name="activity_achievement_gold_medal_button_text">Gold Medal</string>
    <string name="activity_privacy_policy_header_1">Privacy Policy</string>
    <string name="activity_privacy_policy_header_2">Information Collection and Use</string>
    <string name="activity_privacy_policy_header_3">Log Data</string>
    <string name="activity_privacy_policy_header_4">Cookies</string>
    <string name="activity_privacy_policy_header_5">Service Providers</string>
    <string name="activity_privacy_policy_header_6">Security</string>
    <string name="activity_privacy_policy_header_7">Links to Other Sites</string>
    <string name="activity_privacy_policy_header_8">Children’s Privacy</string>
    <string name="activity_privacy_policy_header_9">Changes to This Privacy Policy</string>
    <string name="activity_privacy_policy_header_10">Contact Us</string>
    <string name="activity_privacy_policy_value_1">Kasun Chinthaka built the NIROGYA app as a free app. This SERVICE is provided by Kasun Chinthaka at no cost and is intended for use as is.
        This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
        If you choose to use my Service, then you agree to the collection and use of information in relation with this policy. The Personal Information that I collect are used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
        The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions which is accessible at NIROGYA, unless otherwise defined in this Privacy Policy.</string>
    <string name="activity_privacy_policy_value_2">For a better experience while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to add whatever else I collect here.The information that I request will be retained by us and used as described in this privacy policy.
        The app does use third party services that may collect information used to identify you.</string>
    <string name="activity_privacy_policy_value_3">I want to inform you that whenever you use my Service, in case of an error in the app I collect data and information on your phone called Log Data. This Log Data may include information such as your devices’s Internet Protocol (“IP”) address, device name, operating system version, configuration of the app when utilising my Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="activity_privacy_policy_value_4">Cookies are files with small amount of data that is commonly used an anonymous unique identifier.These are sent to your browser from the website that you visit and are stored on your devices’s internal memory.

This Services does not uses these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collection information and to improve their services. You have the option to either accept or refuse these cookies, and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</string>
    <string name="activity_privacy_policy_value_5">I may employ third-party companies and individuals due to the following reasons:
        To facilitate our Service;To provide the Service on our behalf;To perform Service-related services; or To assist us in analyzing how our Service is used.
I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</string>
    <string name="activity_privacy_policy_value_6">I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</string>
    <string name="activity_privacy_policy_value_7">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over, and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
    <string name="activity_privacy_policy_value_8">This Services do not address anyone under the age of 13. I do not knowingly collect personal identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.</string>
    <string name="activity_privacy_policy_value_9">I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately, after they are posted on this page.</string>
    <string name="activity_privacy_policy_value_10">If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me.</string>
    <string name="activity_profile_header_name">My Profile</string>
    <string name="activity_profile_description_name">To ensure the accuracy, please input your accurate information. We never share them with third parties.</string>
    <string name="activity_profile_height_caption">Height</string>
    <string name="activity_profile_weight_caption">Weight</string>
    <string name="activity_profile_height_default_value">170 cm</string>
    <string name="activity_profile_weight_defaut_value">70.0 kg</string>
    <string name="activity_profile_next_button_display_text">NEXT</string>
    <string name="activity_profile_height_selector_topic">Height</string>
    <string name="activity_profile_height_selector_sub_topic">Distance &amp; speed calculation needs it</string>
    <string name="activity_profile_height_selector_unit">cm</string>
    <string name="activity_profile_height_selector_ok_button">OK</string>
    <string name="activity_profile_height_selector_cancel_button">CANCEL</string>
    <string name="activity_profile_weight_selector_topic">Weight</string>
    <string name="activity_profile_weight_selector_sub_topic">Distance &amp; speed calculation needs it</string>
    <string name="activity_profile_weight_selector_unit">kg</string>
    <string name="activity_profile_weight_selector_ok_button">OK</string>
    <string name="activity_profile_weight_selector_cancel_button">CANCEL</string>
    <string name="activity_select_gender_main_caption_text">Select Gender</string>
    <string name="activity_select_gender_sub_heading_text">Calories &amp; stride length calcaultion needs it.</string>
    <string name="activity_select_gender_female_button_text">Female</string>
    <string name="activity_select_gender_male_button_text">Male</string>
    <string name="activity_select_gender_next_button_text">NEXT</string>
    <string name="app_heading">NIROGYA</string>
    <string name="activity_timeline_no_tweet_message">No Tweets</string>
    <string name="activity_twitter_login_pre_message">Login once, We\'ll remember your details until you signed out. Next time when you are going to log in, You will be directly moved to the NIROGYA timeline.</string>
    <string name="fragment_settings_heading_1">Step Goal</string>
    <string name="fragment_settings_heading_2">Sensitivity</string>
    <string name="fragment_settings_heading_3">Weight</string>
    <string name="fragment_settings_heading_4">Gender</string>
    <string name="fragment_settings_heading_5">Height</string>
    <string name="fragment_settings_heading_6">Language options</string>
    <string name="fragment_settings_heading_7">Instructions</string>
    <string name="fragment_settings_heading_8">Privacy Policy</string>
    <string name="fragment_settings_gender_selector_head_text">Gender</string>
    <string name="fragment_settings_gender_selector_sub_head_text">Distance &amp; speed calculation needs it</string>
    <string name="fragment_settings_gender_selector_female_text">female</string>
    <string name="fragment_settings_gender_selector_male_text">male</string>
    <string name="fragment_settings_gender_selector_ok_button_text">OK</string>
    <string name="fragment_settings_gender_selector_cancel_button_text">CANCEL</string>
    <string name="fragment_settings_height_selector_head_text">Height</string>
    <string name="fragment_settings_height_selector_sub_head_text">Distance &amp; speed calculation needs it</string>
    <string name="fragment_settings_height_selector_unit">cm</string>
    <string name="fragment_settings_height_selector_ok_button_text">OK</string>
    <string name="fragment_settings_height_selector_cancel_button_text">CANCEL</string>
    <string name="fragment_settings_language_selector_head_text">Language</string>
    <string name="fragment_settings_language_selector_message">You have NIROGA version 1.0.0 and It is only compatible with ENGLISH.We will try to give more language support with upcoming versions.</string>
    <string name="fragment_settings_language_selector_cancel_button">CANCEL</string>
    <string name="fragment_settings_language_selector_ok_button">OK</string>
    <string name="fragment_settings_sensitivity_selector_head_text">Sensitivity</string>
    <string name="fragment_settings_sensitivity_selector_message">Distance &amp; speed calculation needs it</string>
    <string name="fragment_settings_sensitivity_selector_cancel_button">CANCEL</string>
    <string name="fragment_settings_step_goal_selector_head_text">Step Goal</string>
    <string name="fragment_settings_step_goal_selector_sub_head_text">Distance &amp; speed calculation needs it</string>
    <string name="fragment_settings_step_goal_selector_radio_button_1">6000</string>
    <string name="fragment_settings_step_goal_selector_radio_button_2">12000</string>
    <string name="fragment_settings_step_goal_selector_radio_button_3">24000</string>
    <string name="fragment_settings_step_goal_selector_ok_button_text">OK</string>
    <string name="fragment_settings_step_goal_selector_cancel_button_text">CANCEL</string>
    <string name="fragment_settings_weight_selector_head_text">Weight</string>
    <string name="fragment_settings_weight_selector_sub_head_text">Distance &amp; speed calculation needs it</string>
    <string name="fragment_settings_weight_selector_unit">kg</string>
    <string name="fragment_settings_weight_selector_ok_button_text">OK</string>
    <string name="fragment_settings_weight_selector_cancel_button_text">CANCEL</string>
</resources>