<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_privacy_policy_background"
    android:orientation="vertical"
    android:padding="@dimen/activity_privacy_policy_padding"
    tools:context="codezilla.foss.nirogya.activities.PrivacyPolicyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/activity_privacy_policy_header_1"
            android:textAlignment="center"
            android:textColor="@color/activity_privacy_policy_text_color"
            android:textSize="@dimen/activity_privacy_policy_header_1_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_privacy_policy_value_1_margin_top"
            android:gravity="center"
            android:text="@string/activity_privacy_policy_value_1"
            android:textAlignment="center"
            android:textColor="@color/activity_privacy_policy_text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/activity_privacy_policy_header_2"
            android:textAlignment="center"
            android:textColor="@color/activity_privacy_policy_text_color"
            android:textSize="@dimen/activity_privacy_policy_header_2_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_privacy_policy_value_2_margin_top"
            android:gravity="center"
            android:text="@string/activity_privacy_policy_value_2"
            android:textAlignment="center"
            android:textColor="@color/activity_privacy_policy_text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_privacy_policy_header_3_margin_top"
            android:gravity="center"
            android:text="@string/activity_privacy_policy_header_3"
            android:textAlignment="center"
            android:textColor="@color/activity_privacy_policy_text_color"
            android:textSize="@dimen/activity_privacy_policy_header_3_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_privacy_policy_value_3_margin_top"
            android:gravity="center"
            android:text="@string/activity_privacy_policy_value_3"
            android:textAlignment="center"
            android:textColor="@color/activity_privacy_policy_text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_privacy_policy_header_4_margin_top"
            android:gravity="center"
            android:text="@string/activity_privacy_policy_header_4"
            android:textAlignment="center"
            android:textColor="@color/activity_privacy_policy_text_color"
            android:textSize="@dimen/activity_privacy_policy_header_4_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_privacy_policy_value_4_margin_top"
            android:gravity="center"
            android:text="@string/activity_privacy_policy_value_4"
            android:textAlignment="center"
            android:textColor="@color/activity_privacy_policy_text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_privacy_policy_header_5_margin_top"
            android:gravity="center"
            android:text="@string/activity_privacy_policy_header_5"
            android:textAlignment="center"
            android:textColor="@color/activity_privacy_policy_text_color"
            android:textSize="@dimen/activity_privacy_policy_header_5_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_privacy_policy_value_5_margin_top"
            android:gravity="center"
            android:text="@string/activity_privacy_policy_value_5"
            android:textAlignment="center"
            android:textColor="@color/activity_privacy_policy_text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_privacy_policy_header_6_margin_top"
            android:gravity="center"
            android:text="@string/activity_privacy_policy_header_6"
            android:textAlignment="center"
            android:textColor="@color/activity_privacy_policy_text_color"
            android:textSize="@dimen/activity_privacy_policy_header_6_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_privacy_policy_value_6_margin_top"
            android:gravity="center"
            android:text="@string/activity_privacy_policy_value_6"
            android:textAlignment="center"
            android:textColor="@color/activity_privacy_policy_text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_privacy_policy_header_7_margin_top"
            android:gravity="center"
            android:text="@string/activity_privacy_policy_header_7"
            android:textAlignment="center"
            android:textColor="@color/activity_privacy_policy_text_color"
            android:textSize="@dimen/activity_privacy_policy_header_7_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_privacy_policy_value_7_margin_top"
            android:gravity="center"
            android:text="@string/activity_privacy_policy_value_7"
            android:textAlignment="center"
            android:textColor="@color/activity_privacy_policy_text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_privacy_policy_header_8_margin_top"
            android:gravity="center"
            android:text="@string/activity_privacy_policy_header_8"
            android:textAlignment="center"
            android:textColor="@color/activity_privacy_policy_text_color"
            android:textSize="@dimen/activity_privacy_policy_header_8_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_privacy_policy_value_8_margin_top"
            android:gravity="center"
            android:text="@string/activity_privacy_policy_value_8"
            android:textAlignment="center"
            android:textColor="@color/activity_privacy_policy_text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_privacy_policy_header_9_margin_top"
            android:gravity="center"
            android:text="@string/activity_privacy_policy_header_9"
            android:textAlignment="center"
            android:textColor="@color/activity_privacy_policy_text_color"
            android:textSize="@dimen/activity_privacy_policy_header_9_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_privacy_policy_value_9_margin_top"
            android:gravity="center"
            android:text="@string/activity_privacy_policy_value_9"
            android:textAlignment="center"
            android:textColor="@color/activity_privacy_policy_text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_privacy_policy_header_10_margin_top"
            android:gravity="center"
            android:text="@string/activity_privacy_policy_header_10"
            android:textAlignment="center"
            android:textColor="@color/activity_privacy_policy_text_color"
            android:textSize="@dimen/activity_privacy_policy_header_10_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_privacy_policy_value_10_margin_top"
            android:gravity="center"
            android:text="@string/activity_privacy_policy_value_10"
            android:textAlignment="center"
            android:textColor="@color/activity_privacy_policy_text_color" />
    </LinearLayout>

</ScrollView>
