<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/fragment_settings_step_goal_selector_background_color"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_settings_step_goal_selector_head_text"
        android:textColor="@color/fragment_settings_step_goal_selector_topic_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/fragment_settings_step_goal_selector_sub_head_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radio_step_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/minimum_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_settings_step_goal_selector_radio_button_1"
                android:checked="true" />

            <RadioButton
                android:id="@+id/average_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_settings_step_goal_selector_radio_button_2" />
            <RadioButton
                android:id="@+id/top_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_settings_step_goal_selector_radio_button_3" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:text="step goal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fs_step_goal_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_settings_step_goal_selector_cancel_button_text" />

        <Button
            android:id="@+id/fs_step_goal_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_settings_step_goal_selector_ok_button_text" />
    </LinearLayout>

</LinearLayout>